--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Graduate work by Netology",
   "main": "index.js",
   "scripts": {
-    "server": "node index.js",
+    "start": "node index.js",
     "dev": "gulp"
   },
   "repository": {
