add babel cli; rename src -> public;

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Graduate work by Netology",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "./node_modules/.bin/babel-node index.js",
     "dev": "gulp"
   },
   "repository": {
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "angular": "1.5.8",
+    "angular-animate": "1.5.8",
+    "angular-aria": "1.5.8",
+    "angular-material": "^1.0.0",
     "angular-route": "1.5.8",
     "angular-socket-io": "^0.7.0",
-    "angular-aria": "1.5.8",
-    "angular-animate": "1.5.8",
-    "angular-material": "^1.0.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
