--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "angular-material": "^1.0.0",
     "angular-route": "1.5.8",
     "angular-socket-io": "^0.7.0",
-    "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
