--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/babel-node index.js",
-    "dev": "gulp"
+    "dev": "cross-env NODE_ENV=development node index.js",
+    "test": "cross-env NODE_ENV=development mocha"
   },
   "repository": {
     "type": "git",
@@ -38,14 +39,18 @@
     "socket.io": "^1.5.1"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "cross-env": "^3.1.4",
     "gulp": "^3.9.1",
-    "gulp-server-livereload": "^1.8.4",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.0.13",
     "gulp-postcss": "^6.2.0",
     "gulp-sass": "^2.1.1",
+    "gulp-server-livereload": "^1.8.4",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
+    "mocha": "^3.2.0",
     "postcss-pxtorem": "^3.3.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean-css": "^2.0.13"
+    "supertest": "^2.0.1"
   }
 }
